--- a/教学质量评价系统.md
+++ b/教学质量评价系统.md
@@ -172,3 +172,40 @@
 - 承载数据的实体层**Models**
 - 工具类通用类等**Common**
 - 三方接口层**API**
+
+待办：
+注册逻辑
+选择角色（学生、教师、督导组、学院管理员）
+
+选择学生：
+输入学号、姓名、专业及用户名密码，同时向学生表插入记录
+
+选择教师：
+输入工号、姓名、学院ID（自动识别？或者是选择式）及用户名密码，同时向教师表插入记录
+
+选择督导组：
+输入编号、组名及用户名密码，同时向督导组表插入记录
+
+选择管理员：
+输入管理员编号、选择对应学院及用户名密码，同时向管理员表插入记录
+
+现在要做：
+
+1. 理清各层次功能代码结构，各层次代码该怎么写
+2. 先写Models类
+
+---
+教师教学评价系统
+项目背景：
+为提高教学质量，高校需建立科学、公正、全面的教师教学评价体系。该系统支持学生、同行教师、教学督导组对教师进行多维度评价，自动生成综合评分报告，为教师职称评定、绩效分配提供数据支持
+
+核心功能：
+
+1. 评价指标管理
+(1) 指标库维护：教务处定义评价维度（教学态度、教学设计、课堂组织等）
+(2) 权重设置：不同角色评价结果按比例合成总分（学生 50%、同行 30%、督导组 20%）
+(3) 个性化配置：各学院可自定义部分评价指标
+2. 评价任务管理
+(1) 任务发布：教务处按学期发布评价任务，设置起止时间
+(2) 自动分配：系统根据课程表自动为学生分配评价任务
+(3) 提醒功能：截止日前 3 天自动提醒未评价学生
