完成了登录注册功能，区分角色使用前缀，注册：选择角色后，根据选择的角色判断角色编号是否正确，教师编号以660开头，学生编号以440开头，督导组编号以990开头，管理员编号以128开头

--- a/教学质量评价系统.md
+++ b/教学质量评价系统.md
@@ -110,7 +110,7 @@
 *零散小功能点*
 
 [√]数据库设计
-[×]登录注册功能
+[√]登录注册功能
 [×]界面设计
 [×]绑定角色ID
 [×]**各学院自定义部分评价指标?**
@@ -172,6 +172,15 @@
 - 承载数据的实体层**Models**
 - 工具类通用类等**Common**
 - 三方接口层**API**
+
+---
+
+## 已实现的功能
+
+注册：
+选择角色后，根据选择的角色判断角色编号是否正确，教师编号以660开头，学生编号以440开头，督导组编号以990开头，管理员编号以128开头
+
+---
 
 待办：
 注册逻辑
